--- a/hanzi-grouper/app/src/main/res/layout/activity_main.xml
+++ b/hanzi-grouper/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
     <include layout="@layout/content_main" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/new_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
@@ -35,6 +35,6 @@
         android:elevation="6dp"
         android:textSize="32dp"
         android:textColor="#fff"
-        app:layout_anchor="@id/fab"
+        app:layout_anchor="@id/new_group"
         app:layout_anchorGravity="center"/>
 </android.support.design.widget.CoordinatorLayout>
