--- a/hanzi-grouper/app/src/main/res/layout/content_character.xml
+++ b/hanzi-grouper/app/src/main/res/layout/content_character.xml
@@ -8,4 +8,16 @@
     tools:context=".CharacterActivity"
     tools:showIn="@layout/activity_character">
 
+    <TextView
+        android:id="@+id/character"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
+        android:text="char"
+        android:textSize="100sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
