--- a/hanzi-grouper/app/src/main/res/layout/layout_group_recycler.xml
+++ b/hanzi-grouper/app/src/main/res/layout/layout_group_recycler.xml
@@ -1,37 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layout_marginBottom="10dp">
+    android:layout_marginBottom="10dp"
+    android:orientation="horizontal">
+
+    <TextView
+        android:id="@+id/character"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="character"
+        android:textColor="#1E1E1E"
+        android:textSize="54sp" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_marginLeft="12dp"
+        android:layout_marginTop="8dp"
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/character"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="character"
-            android:textColor="#1E1E1E"
-            android:textSize="36sp" />
         <TextView
             android:id="@+id/pinyin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="pinyin"
             android:textColor="@color/colorAccent"
-            android:textSize="34sp"
-            android:layout_marginLeft="20dp" />
+            android:textSize="22sp" />
+
+        <TextView
+            android:id="@+id/meaning"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="meaning"
+            android:textColor="#1E1E1E"
+            android:textSize="22sp" />
     </LinearLayout>
-    <TextView
-        android:id="@+id/meaning"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="meaning"
-        android:textColor="#1E1E1E"
-        android:textSize="22sp" />
 </LinearLayout>
