--- a/hanzi-grouper/app/src/main/res/layout/content_character.xml
+++ b/hanzi-grouper/app/src/main/res/layout/content_character.xml
@@ -72,8 +72,8 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginTop="16dp"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             app:layout_constraintTop_toBottomOf="@+id/similar">
 
         </LinearLayout>
